--- a/frontend/resources/styles/common/refactor/fonts.scss
+++ b/frontend/resources/styles/common/refactor/fonts.scss
@@ -23,3 +23,6 @@ $fs-36: math.div(36, $fs-base) + rem;
 $fw400: 400; // Regular (CSS value: 'normal')
 $fw500: 500; // Medium
 $fw700: 700; // Bold (CSS value: 'bold')
+
+// Line heights
+$lh-150: 1.5;
