--- a/frontend/resources/styles/main-default.scss
+++ b/frontend/resources/styles/main-default.scss
@@ -34,5 +34,6 @@
 // Partials
 //#################################################
 
+// TODO: encapsulate pencil loader into its own component
+//       https: //tree.taiga.io/project/penpot/task/8217
 @import "main/partials/loader";
-@import "main/partials/workspace";
