--- a/frontend/src/app/main/ui/workspace.scss
+++ b/frontend/src/app/main/ui/workspace.scss
@@ -6,13 +6,9 @@
 
 @import "refactor/common-refactor.scss";
 
-:global(:root) {
-  --s-4: 0.25rem;
-  --layer-indentation-size: calc(var(--s-4) * 6);
-}
-
 .workspace {
   @extend .new-scrollbar;
+  --layer-indentation-size: calc($s-4 * 6);
   width: 100vw;
   height: 100vh;
   max-height: 100vh;
@@ -34,6 +30,10 @@
 }
 
 .workspace-content {
+  background-color: var(--color-canvas);
+  display: flex;
+  padding: 0;
+  margin: 0;
   grid-area: viewport;
 }
 
