--- a/frontend/src/app/main/ui/ds/storybook.scss
+++ b/frontend/src/app/main/ui/ds/storybook.scss
@@ -5,7 +5,7 @@
   row-gap: 1rem;
 }
 
-.icon-grid {
+.story-grid {
   display: grid;
   grid-template-columns: repeat(auto-fit, var(--component-grid-size, 16px));
   gap: 1rem;
