--- a/frontend/src/app/main/ui/ds/storybook.scss
+++ b/frontend/src/app/main/ui/ds/storybook.scss
@@ -10,8 +10,12 @@
   grid-template-columns: repeat(auto-fit, var(--component-grid-size, 16px));
   gap: 1rem;
   color: var(--color-foreground-primary);
+}
 
-  & > * {
-    max-width: 100%;
-  }
+.story-grid-cell {
+  max-width: 100%;
+}
+
+.story-header {
+  color: var(--color-foreground-primary);
 }
