--- a/frontend/src/app/main/ui/workspace/tokens/context_menu.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/context_menu.scss
@@ -38,7 +38,11 @@
 }
 
 .separator {
-  height: $s-12;
+  @include bodySmallTypography;
+  margin: $s-6;
+  display: flex;
+  align-items: center;
+  border-block-start: $s-1 solid var(--panel-border-color);
 }
 
 .context-menu-item {
