--- a/frontend/src/app/main/ui/dashboard/placeholder.scss
+++ b/frontend/src/app/main/ui/dashboard/placeholder.scss
@@ -12,21 +12,6 @@
   display: grid;
   padding: $s-12 0;
 
-  &.loader {
-    justify-items: center;
-  }
-
-  .icon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    svg {
-      width: $s-64;
-      height: $s-64;
-      fill: $df-secondary;
-    }
-  }
-
   &.libs {
     background-image: url(/images/ph-left.svg), url(/images/ph-right.svg);
     background-position:
@@ -89,4 +74,24 @@
     color: $df-secondary;
     font-size: $fs-16;
   }
+}
+
+.loader-wrapper {
+  display: grid;
+  justify-items: center;
+  height: 100%;
+  width: 100%;
+  padding: $s-12 0;
+  border-radius: $br-12;
+}
+
+.placeholder-loader {
+  align-self: end;
+}
+
+.placeholder-text {
+  margin-top: $s-12;
+  color: $df-secondary;
+  font-size: $fs-16;
+  align-self: start;
 }
