:recycle: Refactor loader* component props & usage

--- a/frontend/src/app/main/ui/dashboard/grid.scss
+++ b/frontend/src/app/main/ui/dashboard/grid.scss
@@ -373,7 +373,5 @@ $thumbnail-default-height: $s-168; // Default width
 }
 
 .grid-loader {
-  width: calc(var(--th-width, #{$thumbnail-default-width}) * 0.25);
-  height: 100%;
-  align-self: center;
+  --icon-width: calc(var(--th-width, #{$thumbnail-default-width}) * 0.25);
 }
