--- a/frontend/src/app/main/ui/dashboard/placeholder.scss
+++ b/frontend/src/app/main/ui/dashboard/placeholder.scss
@@ -76,22 +76,16 @@
   }
 }
 
-.loader-wrapper {
-  display: grid;
-  justify-items: center;
-  height: 100%;
-  width: 100%;
-  padding: $s-12 0;
-  border-radius: $br-12;
-}
-
 .placeholder-loader {
-  align-self: end;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  row-gap: var(--sp-xxxl);
+  margin: var(--sp-xxxl) 0 var(--sp-m) 0;
 }
 
 .placeholder-text {
-  margin-top: $s-12;
   color: $df-secondary;
   font-size: $fs-16;
-  align-self: start;
+  text-align: center;
 }
