--- a/frontend/src/app/main/ui/ds/product/loader.scss
+++ b/frontend/src/app/main/ui/ds/product/loader.scss
@@ -14,25 +14,30 @@
   }
 }
 
-.loader-wrapper {
-  --color-loader-foreground: var(--color-foreground-secondary);
-  color: var(--color-loader-foreground);
-  display: flex;
+.wrapper {
+  --loader-color-foreground: var(--color-foreground-secondary);
+  --loader-icon-width: unset;
+
+  display: inline-flex;
   column-gap: var(--sp-s);
+  align-items: center;
+
+  color: var(--loader-color-foreground);
 }
 
-.loader-wrapper-overlay {
+.wrapper-overlay {
   display: grid;
-  place-items: center;
+  place-content: center;
   height: 100%;
   width: 100%;
+  row-gap: var(--sp-s);
 }
 
 .loader {
   fill: currentColor;
+  width: var(--icon-width);
 }
 
 .loader-line {
-  fill: currentColor;
   animation: line-pencil 0.8s infinite linear;
 }
