--- a/frontend/src/app/main/ui/workspace/tokens/sets.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sets.scss
@@ -51,17 +51,17 @@
   /*&:hover{
     box-shadow: 20px 0 0 0 var(--layer-row-background-color-hover);
   }*/
-
 }
 
-.set-item-set, .set-item-group {
+.set-item-set,
+.set-item-group {
   @include bodySmallTypography;
   display: flex;
   align-items: center;
   min-height: $s-32;
   width: 100%;
   cursor: pointer;
-  color: var(--layer-row-foreground-color); 
+  color: var(--layer-row-foreground-color);
   .set-name {
     @include textEllipsis;
     flex-grow: 1;
@@ -85,12 +85,11 @@
   }
 }
 
-.set-item-set{
+.set-item-set {
   &:hover {
     background-color: var(--layer-row-background-color-hover);
     color: var(--layer-row-foreground-color-hover);
     box-shadow: -100px 0 0 0 var(--layer-row-background-color-hover);
-
   }
 }
 
@@ -107,7 +106,7 @@
   min-height: $s-32;
   width: 100%;
   cursor: pointer;
-  //color: var(--layer-row-foreground-color); 
+  //color: var(--layer-row-foreground-color);
   background-color: var(--layer-row-background-color-selected);
   color: var(--layer-row-foreground-color-selected);
   box-shadow: -20px 0 0 0 var(--layer-row-background-color-selected);
@@ -137,7 +136,6 @@
     background-color: var(--layer-row-background-color-hover);
     color: var(--layer-row-foreground-color-hover);
     box-shadow: -100px 0 0 0 var(--layer-row-background-color-hover);
-
   }
 }
 .action-btn {
