--- a/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
@@ -17,7 +17,7 @@
 .sets-sidebar {
   flex-shrink: 0;
   overflow-y: auto;
-  max-height: 40%;  // Adjust this value as needed
+  max-height: 40%;
 }
 
 .tokens-section-wrapper {
