--- a/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/editable_select.scss
@@ -14,6 +14,7 @@
   width: 100%;
   padding: $s-8;
   border-radius: $br-8;
+  position: relative;
   cursor: pointer;
 
   background: transparent;
