:recycle: Replace layer tabs component with the new tab switcher component

--- a/frontend/src/app/main/ui/workspace/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar.scss
@@ -89,3 +89,22 @@ $width-settings-bar-max: $s-500;
   border-bottom: $s-2 solid var(--resize-area-border-color);
   cursor: ns-resize;
 }
+
+.left-sidebar-tabs {
+  --tabs-nav-padding-inline-start: var(--sp-m);
+  --tabs-nav-padding-inline-end: var(--sp-m);
+}
+
+.collapse-sidebar-button {
+  --collapse-icon-color: var(--color-foreground-secondary);
+  @include flexCenter;
+  @include buttonStyle;
+  height: 100%;
+  width: $s-24;
+  border-radius: $br-5;
+  color: var(--collapse-icon-color);
+  transform: rotate(180deg);
+  &:hover {
+    --collapse-icon-color: var(--color-foreground-primary);
+  }
+}
