--- a/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sidebar.scss
@@ -48,7 +48,14 @@
 
 .tokens-section-wrapper {
   flex: 1;
+  padding-top: $s-12;
+  padding-left: $s-12;
   overflow-y: auto;
+}
+
+// TODO Remove once sets are available to public
+.sets-section-wrapper + .tokens-section-wrapper {
+  padding-top: 0;
 }
 
 .token-pills-wrapper {
