--- a/frontend/src/app/main/ui/workspace/tokens/sets.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/sets.scss
@@ -28,6 +28,8 @@
   width: 100%;
   cursor: pointer;
   color: var(--layer-row-foreground-color);
+  padding-right: $s-2;
+
   .set-name {
     @include textEllipsis;
     flex-grow: 1;
