--- a/frontend/src/app/main/ui/workspace/sidebar/assets/components.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/assets/components.scss
@@ -25,8 +25,8 @@
 .grid-cell {
   @include flexCenter;
   position: relative;
-  aspect-ratio: 1 / 1;
-  padding: $s-8;
+  width: 100%;
+  padding-top: 100%;
   border-radius: $br-8;
   background-color: var(--assets-component-background-color);
   overflow: hidden;
@@ -101,11 +101,20 @@
 }
 
 .thumbnail {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 100%;
   height: 100%;
   object-fit: contain;
   pointer-events: none;
   border: 0;
+  padding: $s-8;
 }
 
 .grid-placeholder {
