--- a/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
@@ -126,7 +126,8 @@ hr {
 }
 
 .edit-theme-inputs-wrapper {
-  display: flex;
+  display: grid;
+  grid-template-columns: 0.6fr 1fr;
   gap: $s-12;
 }
 
