--- a/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
@@ -56,6 +56,30 @@ hr {
   padding: $s-6;
 }
 
+.empty-themes-wrapper {
+  display: flex;
+  flex-direction: column;
+
+  .empty-themes-message {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: $s-12;
+    padding: $s-72 0;
+
+    h1 {
+      @include headlineLargeTypography;
+    }
+
+    p {
+      @include bodyMediumTypography;
+      font-weight: 500;
+      color: var(--color-foreground-secondary);
+    }
+  }
+}
+
 .create-theme-button {
   @extend .button-secondary;
   padding: $s-6;
