Add abstract dropdown component

--- a/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/modals/themes.scss
@@ -212,6 +212,10 @@ hr {
   }
 }
 
+.group-input-wrapper {
+  position: relative;
+}
+
 .group-drop-down-button {
   @include buttonStyle;
   width: $s-24;
