:recycle: Update select background color on input

--- a/frontend/src/app/main/ui/ds/controls/input.scss
+++ b/frontend/src/app/main/ui/ds/controls/input.scss
@@ -57,7 +57,7 @@
   }
 
   &::selection {
-    background: var(--color-accent-primary-muted);
+    background: var(--color-accent-select);
   }
 
   &::placeholder {
