:bug: Fix arrow key movement on tabs

--- a/frontend/src/app/main/ui/ds/tab_switcher.scss
+++ b/frontend/src/app/main/ui/ds/tab_switcher.scss
@@ -101,7 +101,17 @@
 }
 
 .tab-panel {
+  --tab-panel-outline-color: none;
+  &:focus {
+    outline: none;
+  }
+
+  &:focus-visible {
+    --tab-panel-outline-color: var(--color-accent-primary);
+  }
+
   display: grid;
   width: 100%;
   height: 100%;
+  outline: $b-1 solid var(--tab-panel-outline-color);
 }
