--- a/frontend/src/app/main/ui/workspace/sidebar/options/rows/stroke_row.scss
+++ b/frontend/src/app/main/ui/workspace/sidebar/options/rows/stroke_row.scss
@@ -18,8 +18,9 @@
 }
 
 .stroke-options {
-  @include flexRow;
   display: grid;
+  align-items: center;
+  gap: $s-4;
   grid-template-columns: 1fr 2fr 2fr;
 
   .stroke-width-input-element {
@@ -28,7 +29,10 @@
   }
 }
 .stroke-caps-options {
-  @include flexRow;
+  display: grid;
+  align-items: center;
+  gap: $s-4;
+  grid-template-columns: 1fr auto 1fr;
 }
 
 .cap-select {
