--- a/frontend/src/app/main/ui/workspace/tokens/modals.scss
+++ b/frontend/src/app/main/ui/workspace/tokens/modals.scss
@@ -8,6 +8,9 @@
 
 .shadow {
   @extend .modal-container-base;
+  width: auto;
+  max-width: auto;
+  min-width: auto;
   @include menuShadow;
   position: absolute;
   z-index: 11;
