--- a/frontend/src/app/main/ui/ds/layout/tab_switcher.scss
+++ b/frontend/src/app/main/ui/ds/layout/tab_switcher.scss
@@ -4,9 +4,9 @@
 //
 // Copyright (c) KALEIDOS INC
 
-@use "./_sizes.scss" as *;
-@use "./_borders.scss" as *;
-@use "./typography.scss" as *;
+@use "../_sizes.scss" as *;
+@use "../_borders.scss" as *;
+@use "../typography.scss" as *;
 
 .tabs {
   --tabs-bg-color: var(--color-background-secondary);
