--- a/frontend/src/app/main/ui/dashboard/projects.scss
+++ b/frontend/src/app/main/ui/dashboard/projects.scss
@@ -128,6 +128,10 @@
   padding: 0 $s-4;
 }
 
+.placeholder-placement {
+  margin: $s-16 $s-32;
+}
+
 .show-more {
   --show-more-color: var(--button-secondary-foreground-color-rest);
   @include buttonStyle;
