--- a/frontend/src/app/main/ui/ds/_sizes.scss
+++ b/frontend/src/app/main/ui/ds/_sizes.scss
@@ -10,5 +10,8 @@
 $sz-16: px2rem(16);
 $sz-32: px2rem(32);
 $sz-36: px2rem(36);
+$sz-160: px2rem(160);
+$sz-200: px2rem(200);
 $sz-224: px2rem(224);
 $sz-400: px2rem(400);
+$sz-964: px2rem(964);
